--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ models/
 predictions/
 # Synthetic data
 synthetic/
+# Temporary data
+temp/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
