--- a/environment.yaml
+++ b/environment.yaml
@@ -5,8 +5,10 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - boto=2.49.0=py_0
   - boto3=1.10.8=py_0
   - botocore=1.13.8=py_0
+  - bz2file=0.98=py_0
   - bzip2=1.0.8=h516909a_1
   - ca-certificates=2019.11.28=hecc5488_0
   - cairo=1.16.0=hfb77d84_1002
@@ -17,16 +19,20 @@ dependencies:
   - cryptography=2.8=py37h72c5cf5_0
   - cudatoolkit=10.1.243=h6bb024c_0
   - dbus=1.13.6=he372182_0
+  - decorator=4.4.1=py_0
+  - distro=1.4.0=py_0
   - docutils=0.15.2=py37_0
   - expat=2.2.5=he1b5a44_1004
   - ffmpeg=4.1.3=h167e202_0
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.0=he983fc9_1
+  - gensim=3.8.1=py37he1b5a44_1
   - gettext=0.19.8.1=hc5be6a0_1002
   - giflib=5.1.9=h516909a_0
   - glib=2.58.3=py37h6f030ca_1002
   - gmp=6.1.2=hf484d3e_1000
   - gnutls=3.6.5=hd3a4fd2_1002
+  - google-compute-engine=2.8.13=py37_0
   - graphite2=1.3.13=hf484d3e_1000
   - gst-plugins-base=1.14.5=h0935bb2_0
   - gstreamer=1.14.5=h36ae1b5_0
@@ -35,6 +41,7 @@ dependencies:
   - icu=64.2=he1b5a44_1
   - idna=2.8=py37_1000
   - ignite=0.2.1=py37_0
+  - imbalanced-learn=0.5.0=py_0
   - intel-openmp=2019.4=243
   - jasper=1.900.1=h07fcdf6_1006
   - jmespath=0.9.4=py_0
@@ -66,7 +73,9 @@ dependencies:
   - mkl=2019.4=243
   - ncurses=6.1=hf484d3e_1002
   - nettle=3.4.1=h1bed415_1002
+  - networkx=2.4=py_0
   - ninja=1.9.0=hc9558a2_1
+  - node2vec=0.2.2=py_0
   - nspr=4.23=he1b5a44_0
   - nss=3.47=he751ad9_0
   - numpy=1.17.3=py37h95a1406_0
@@ -98,6 +107,7 @@ dependencies:
   - scipy=1.3.2=py37h921218d_0
   - setuptools=42.0.1=py37_0
   - six=1.13.0=py37_0
+  - smart_open=1.9.0=py_0
   - sqlite=3.30.1=hcee41ef_0
   - tk=8.6.10=hed695b0_0
   - tqdm=4.40.0=py_0
@@ -119,5 +129,11 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.4=h3b9ef0a_1
+  - pip:
+    - argparse==1.4.0
+    - cython==0.29.14
+    - deepwalk==1.0.3
+    - futures==3.1.1
+    - psutil==5.6.7
 prefix: /home/mila/teaching/user09/.conda/envs/fb-env-new
 
